--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,7 @@
 gemini:
-  key: AIzaSyCdW06STYYHCV4OinTCLGs2dpABUnWq0aY
+  key: ?
 openai:
-  key: AIzaSyCdW06STYYHC7599hsogossajjgjsihsioja
+  key: ?
 
 
 patientــName: mehran
